<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConnectMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="LoginSubmit">Login</string>
    <string name="Login_Username">Username</string>
    <string name="Login_password">Password</string>
    <string name="EnterTag">Enter Tag</string>
    <string name="ViewProfile">View Profile</string>
    <string name="SubmitResume">Submit Resume</string>
    <string name="Search">Search</string>

</resources>
