<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:ems="10"
        android:hint="@string/EnterTag"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/ViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/ViewProfile" />

    <Button
        android:id="@+id/SubmitRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ViewProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/SubmitResume" />

</RelativeLayout>
